--- a/style.css
+++ b/style.css
@@ -4,33 +4,28 @@
   box-sizing: border-box;
 }
 
-/** {*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*  box-sizing: border-box;*/
-/*}*/
+.main-visual {
+  width: 100%;
+  height: 400px;
+  background-image: url(img/mv.jpg);
+  background-size: cover;
+  background-position: bottom;
+}
 
-/*.main-visual {*/
-/*  width: 100%;*/
-/*  height: 400px;*/
-/*  background-image: url(img/mv.jpg);*/
-/*  background-size: cover;*/
-/*  background-position: bottom;*/
-/*}*/
+.title {
+  color: gray;
+  padding-top: 20px;
+  padding-left: 20px;
+}
 
-/*.headline {*/
-/*  padding: 20px;*/
-/*}*/
+main {
+  width: 840px;
+  padding: 50px 0 20px 0;
+  margin: 0 auto;
+}
 
-/*main {*/
-/*  width: 840px;*/
-/*  margin: 0 auto;*/
-/*  padding: 50px 0 20px 0;*/
-/*}*/
-
-/*.service {*/
-/*  width: 840px;*/
-/*  margin-bottom: 30px;*/
-/*  padding-bottom: 30px;*/
-/*  border-bottom: 1px solid #d1d1d1;*/
-/*}*/
+.text {
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #acabab;
+}
